<resources>
    <string name="app_name">Jesmond Swimming Pool</string>
    <string name="title_attendance">Attendance</string>
    <string name="title_students">Dashboard</string>
    <string name="title_operation">operation</string>
    <string name="title_activity_main">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Jsmond Swimming</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_name">This username  is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="prompt_userName">Username</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_student_detail">StudentDetail</string>
    <string name="next">next</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="comfirm_password">Confirm password</string>
    <string name="address">Address</string>
    <string name="note">Note</string>
    <string name="phoneNumber">PhoneNumber</string>
    <string name="comfirm">confirm</string>
    <string name="error_tooshort_username">username is too short</string>
    <string name="error_tooshort_password">password is too short</string>
    <string name="error_different_password">different from password</string>
    <string name="please_wait">please wait...</string>
    <string name="Complete">complete</string>
    <string name="Error">error</string>
    <string name="Processing">processing</string>
    <string name="Upload" >Sign In</string>
</resources>
