<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
<android.support.v7.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dip"
    >
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        app:counterMaxLength="20"
        app:counterEnabled="true"

        >

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:imeActionId="6"
            android:imeActionLabel="@string/next"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        app:counterMaxLength="20"
        app:counterEnabled="true"
        >

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:imeActionId="6"
            android:imeActionLabel="@string/next"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        app:counterMaxLength="20"
        app:counterEnabled="true"
        >

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:imeActionId="6"
            android:imeActionLabel="@string/next"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        app:counterMaxLength="20"
        app:counterEnabled="true"
        >

        <EditText
            android:id="@+id/et_comfirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/comfirm_password"
            android:imeActionId="6"
            android:imeActionLabel="@string/next"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        app:counterMaxLength="11"
        app:counterEnabled="true"
        >
        <EditText
            android:id="@+id/et_phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phoneNumber"
            android:imeActionId="6"
            android:imeActionLabel="@string/next"
            android:imeOptions="actionNext"
            android:inputType="phone"
            android:maxLines="1"
            android:lines="1"
            android:singleLine="true"
            />

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        app:counterMaxLength="100"
        app:counterEnabled="true"
        >

        <EditText
            android:id="@+id/et_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address"
            android:imeActionId="6"
            android:imeActionLabel="@string/next"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="2"
            android:lines="2"
            />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        app:counterMaxLength="256"
        app:counterEnabled="true"
        >

        <EditText
            android:id="@+id/et_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/note"
            android:imeActionId="6"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="4"
            android:lines="2"
            android:minLines="2"
            />

    </android.support.design.widget.TextInputLayout>
    <Button
        android:id="@+id/btn_confirm"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/comfirm"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"
        android:textStyle="bold" />
</android.support.v7.widget.LinearLayoutCompat>
</ScrollView>