<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    tools:context="swimmingpool.co.uk.jesmondswimmingpool.activity.LoginActivity">

    <!-- Login progress -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="vertical"
        android:id="@+id/login_progress"
        android:layout_gravity="center"
        >
    <ProgressBar

        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:layout_marginBottom="8dp"
       />
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:gravity="center"
            android:text="authenticating"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"

        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="10">

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:textStyle="bold|italic"
                android:lineSpacingExtra="5dip"
                android:text="JSMOND SWIMMING POOL\n Management"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="20dp" />

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                app:counterEnabled="true"
                app:counterMaxLength="30"
                >

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_userName"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                app:passwordToggleDrawable="@drawable/ic_visibility_black_24dp"
                app:passwordToggleEnabled="true"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                >

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionGo"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in"
                android:textColor="@android:color/white"
                android:background="@color/colorPrimary"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
